# langchain-service

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/: routes.py
app/core/: cache.py  config.py  database.py  logger.py
app/models/: schemas.py
app/services/: chunking.py  document_loader.py  graph.py  llm.py  pipeline.py  retrieval.py
app/tests/: conftest.py  test_api.py  test_document_loader.py
