[project]
name = "langchain-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "pypdf>=6.5.0",
    "python-multipart>=0.0.21",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]
